--- a/Jinhuyk-MD/sample-config.env
+++ b/Jinhuyk-MD/sample-config.env
@@ -1,11 +1,11 @@
-OWNER_NUMBER="237656520674"
+OWNER_NUMBER="22668014772"
 MONGODB_URI=mongodb+srv://rahul:rahul@cluster0.ik98tiw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 SESSION_ID = "ID-here"
 THUMB_IMAGE = "https://telegra.ph/file/40ffc2a288542560c887c.jpg"
 port = 5000
-email = "Kermd237@gmail.com"
+email = "mikeysano4t@gmail.com"
 global_url = "https://www.instagram.com/_________rahul004_________?igsh=MTYyNWVmejAwejN1aA=="
-OWNER_NAME = "☞⌜ KG TECH⌝☜"
+OWNER_NAME = "☞⌜ 𝑴𝒂𝒓𝒄𝒆𝒍 𝒎𝒊𝒌𝒂𝒆𝒍𝒔𝒐𝒏⌝☜"
 READ_MESSAGE = false
 PREFIX = .
 WARN_COUNT = 3
@@ -13,7 +13,7 @@ DISABLE_PM = false
 ANTI_BAD_WORD = "fuck"
 LEVEL_UP_MESSAGE= true
 WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
-THEME= KERM_MD-V2
+THEME= ༆𝑱𝑰𝑽𝑰𝑳𝑰𝑼𝑺𓃵𓂀𝑭𝑨𝑴𝑰𝑳𝒀𓂀⃝🪽
 WORKTYPE = public
-PACK_NAME = "Kerm-MD-V2"
+PACK_NAME = "༆𝑱𝑰𝑽𝑰𝑳𝑰𝑼𝑺𓃵𓂀𝑭𝑨𝑴𝑰𝑳𝒀𓂀⃝🪽"
 ANTILINK_VALUES = "chat.whatsapp.com"
